--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h2 class="marker marker-center">My Skills</h2>
     </div>
     <div class="text-center">
-      <p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for CAD, Testing and Developement.</p>
+      <p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for CAD, PLM, Manual Testing and Developement.</p>
     </div>
     <div class="bg-light p-3">
       <div class="row">
@@ -195,7 +195,7 @@
       <div class="row">
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Teamcenter X Associate.png" >
+            <img src="images/Badges/Teamcenter X Associate.png" class="img-fluid" >
             <b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;">Teamcenter Associate</figcaption></b>
             <!-- <b style="text-align:center">Teamcenter X Associate</b> -->
           </div>                      
