--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h2 class="marker marker-center">My Skills</h2>
     </div>
     <div class="text-center">
-      <p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for CAD, PLM, Manual Testing and Developement.</p>
+      <p class="mx-auto mb-3" style="max-width:800px">I am a quick learner and specialize in multitude of skills required for CAD, PLM, Manual Testing and Developement.</p>
     </div>
     <div class="bg-light p-3">
       <div class="row">
@@ -188,9 +188,6 @@
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Certifications</h2>
     </div>
-    <!-- <div class="text-center">
-      <p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for CAD, Testing and Developement.</p>
-    </div> -->
     <div class="bg-light p-3">
       <div class="row">
         <div class="col">
@@ -227,7 +224,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Mendix Rapid Developer.png" class="img-fluid>
+            <img src="images/Badges/Mendix Rapid Developer.png" class="img-fluid">
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Mendix Rapid Developer</figcaption></b>      
             <!-- <b style="text-align:center">Mendix Rapid Developer</b>   -->
           </div>                      
