--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
-            <div class="d-flex text-medium fw-bolder"><span class="me-auto">Teamcenter and Active Workspace</span></div>
-            <div class="text-muted text-small"><small>(Structure Manager, Change Management, Workflow Viewer, Organization, Teamcenter Visualization etc.)</small></div>
+            <div class="d-flex text-medium fw-bolder"><span class="me-auto">Teamcenter/Teamcenter X/Active Workspace</span></div>
+            <div class="text-muted text-medium"><small>(Structure Manager, Change Management, Workflow Viewer, Organization, Teamcenter Visualization etc.)</small></div>
 
           </div>
           <div class="py-1">
