--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
-    
+                <ul class="nav justify-content-left">                  
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin fa-2x"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" title="LinkedIn"><i class="fas fa-users fa-2x"></i><span class="menu-title sr-only">Siemens Community</span></a></li>
+                 
+                </ul>
               </nav>
             </div>            
           </div>
