--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     </div>
   </div>
 </div>
-<div class="section px-2 px-lg-4 pt-5" id="portfolio">
+<!-- <div class="section px-2 px-lg-4 pt-5" id="community">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Community of Practice </h2>
@@ -427,7 +427,56 @@
     </div>        
     
   </div>
-</div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
+        <div class="card-header px-3 py-2">
+          <div class="d-flex justify-content-between">
+            <div>
+              <h3 class="h5 mb-1">Siemens NX Users</h3>
+              <div class="text-muted text-medium">Created : 2018</div>
+            </div><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-3x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a>
+          </div>
+        </div>
+        <div class="card-body px-3 py-2">
+          <ul>
+            <li>Author of the Group</li>
+            <li>11000+ members</li>
+            <li>Experts from Siemens and around the world to help</li>
+            <br>
+            <br>
+            <div class="text-center">
+              <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.facebook.com/groups/ugnxusers" target="_blank">Join Group </a></div>
+            </div>
+            </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
+        <div class="card-header px-3 py-2">
+          <div class="d-flex justify-content-between">
+            <div>
+              <h3 class="h5 mb-1">Siemens NX (#NXMakesItReal)</h3>
+              <div class="text-muted text-medium">Created : 2010 </div>
+             </div><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a>
+          </div>
+        </div>
+        <div class="card-body px-3 py-2">
+          <ul>
+            <li>Became Owner in 2017 (Handed over by Amy Reyes - Former Siemens Marketing and Community manager)</li>
+            <li>11000+ members</li>
+            <li>Experts from Siemens and around the world to help</li>
+            <div class="text-center">
+              <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/2962050/" target="_blank">Join Group </a></div>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </div>        
+    
+  </div>
+</div> -->
 <div class="section px-2 px-lg-4 pt-5" id="portfolio">
   <div class="container">
     <div class="text-center mb-5">
