--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">                  
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin fa-2x"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" title="LinkedIn"><i class="fas fa-users fa-2x"></i><span class="menu-title sr-only">Siemens Community</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="Community"><i class="fas fa-users fa-2x" style='color:#000000'></i><span class="menu-title sr-only">Siemens Community</span></a></li>
                  
                 </ul>
               </nav>
@@ -495,7 +495,7 @@
         <nav role="navigation">
           <ul class="nav justify-content-center">
               <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-            
+              <li class="nav-item"><a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="LinkedIn"><i class="fas fa-users fa-2x" style='color:#000000'></i><span class="menu-title sr-only">Siemens Community</span></a></li>
          </ul>
         </nav>
       </div>
