--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     <div class="row">
       <div class="col">
-        <div class="card mb-3" data-aos="fade-left" data-aos-delay="400">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
@@ -289,7 +289,7 @@
 
     <div class="row">
       <div class="col">
-        <div class="card mb-3" data-aos="fade-left" data-aos-delay="400">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
@@ -339,7 +339,7 @@
     
     <div class="row">
       <div class="col">
-        <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="300">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
