--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
   <body id="top">
     <header class="bg-light">
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">ganeshkadole.github.io</a>
+        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Portfolio Page</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
@@ -38,8 +38,7 @@
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> 
-              <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio Pege</a></li>                            
+              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>                            
             </ul>
           </div>
         </div>
