--- a/index.html
+++ b/index.html
@@ -508,31 +508,34 @@
 
   <div class="container-narrow">
     <div class="bg-light p-3">
+      
       <div class="row">
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Teamcenter X Associate.png" class="img-fluid" >
-            <b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;">Teamcenter</figcaption></b>
-            <!-- <b style="text-align:center">Teamcenter X Associate</b> -->
-          </div>                      
-        </div>
-
-        <div class="col">
-          <div class="py-1">
-            <a href="portfolio.html"><img src="images/Badges/NX Design Associate.png" class="img-fluid">   
-            <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Active Workspace</figcaption></b>
+            <a href="portfolio.html"></a><img src="images/Teamcenter.png" class="img-fluid">   
+            <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Teamceter Portfolio</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
-
+  
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid">
-            <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">NX Open</figcaption></b>
-            <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
-          </div>                      
+            <a href="portfolio.html"></a><img src="images/ActiveWorkspace.png" class="img-fluid">   
+            <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Active Workspace Portfolio</figcaption></b>
+            <!-- <b style="text-align:center">NX Design Associate</b>      -->
+          </div>
         </div>
-      </div>
+  
+        <div class="col">
+          <div class="py-1">
+            <a href="portfolio.html"></a><img src="images/NXOpen.png" class="img-fluid">   
+            <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX  Portfolio</figcaption></b>
+            <!-- <b style="text-align:center">NX Design Associate</b>      -->
+          </div>
+        </div>
+      </div>  
+
+      
     </div>
   </div>  
 </div>
