--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <div class="row">
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html"></a><img src="images/Teamcenter.png" class="img-fluid">   
+            <a href="portfolio.html"><img src="images/Teamcenter.png" class="img-fluid"></a>  
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Teamceter Portfolio</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
@@ -520,7 +520,7 @@
   
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html"></a><img src="images/ActiveWorkspace.png" class="img-fluid">   
+            <a href="portfolio.html"><img src="images/ActiveWorkspace.png" class="img-fluid"></a>
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Active Workspace Portfolio</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
@@ -528,14 +528,12 @@
   
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html"></a><img src="images/NXOpen.png" class="img-fluid">   
+            <a href="portfolio.html"><img src="images/NXOpen.png" class="img-fluid"></a>   
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX  Portfolio</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
-      </div>  
-
-      
+      </div>        
     </div>
   </div>  
 </div>
