--- a/index.html
+++ b/index.html
@@ -512,16 +512,16 @@
       <div class="row">
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html" target="_blank"><img src="images/Teamcenter.png" class="img-fluid"></a>  
-            <a href="portfolio.html" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Teamceter Portfolio</figcaption></b></a> 
+            <a href="portfolio.html#teamcenter" target="_blank"><img src="images/Teamcenter.png" class="img-fluid"></a>  
+            <a href="portfolio.html#teamcenter" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Teamceter Portfolio</figcaption></b></a> 
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
   
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html" target="_blank"><img src="images/ActiveWorkspace.png" class="img-fluid"></a>
-            <a href="portfolio.html" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Active Workspace Portfolio</figcaption></b></a> 
+            <a href="portfolio.html#activeworkspace" target="_blank"><img src="images/ActiveWorkspace.png" class="img-fluid"></a>
+            <a href="portfolio.html#activeworkspace" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">Active Workspace Portfolio</figcaption></b></a> 
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
