--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> 
-              <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio Pege</a></li>                            
+              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>  -->
+              <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a></li>                            
             </ul>
           </div>
         </div>
@@ -255,12 +255,11 @@
   </div>
 </div>
    
-<div class="section px-2 px-lg-4 pt-5" id="portfolio">
+<div class="section px-2 px-lg-4 pt-5">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio </h2>
     </div>
-      <!-- <h3 style="text-align:center;">(In Progress)</h3> -->
   </div>
 
   <div class="container-narrow">
