--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#teamcenter">Teamcenter</a></li>
               <li class="nav-item"><a class="nav-link" href="#activeworkspace">Active Workspace</a></li>
-              <li class="nav-item"><a class="nav-link" href="#nxopen">NX Open</a></li>                         
+              <li class="nav-item"><a class="nav-link" href="#nxopen">NX Customization</a></li>                         
             </ul>
           </div>
         </div>
@@ -182,7 +182,7 @@
           <div class="col">
             <div class="py-1">
               <a href="portfolio.html#nxopen" target="_blank"><img src="images/NXOpen.png" class="img-fluid"></a>   
-              <a href="portfolio.html#nxopen" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX  Portfolio</figcaption></b></a> 
+              <a href="portfolio.html#nxopen" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX Portfolio</figcaption></b></a> 
               <!-- <b style="text-align:center">NX Design Associate</b>      -->
             </div>
           </div>
